compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__adding_annotation_to_function_while_changing_type_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub fn pair(a, b) -> #(a, b)
+ pub fn pair(Int, Int) -> #(Int, Int)
