compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__adding_constructors_to_external_custom_type_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub type Wibble
+ pub type Wibble {
+   Wibble
+ }
