compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__adding_custom_type_parameter_is_major.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MAJOR

== the_module ==
- pub type Wibble(a)
+ pub type Wibble(a, b)
