compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__adding_label_to_constructor_field_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub type Wibble {
-   Wibble(Int, String)
- }
+ pub type Wibble {
+   Wibble(int: Int, string: String)
+ }
