compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__adding_label_to_function_parameter_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub fn add(Int, Int) -> Int
+ pub fn add(first: Int, second: Int) -> Int
