compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__adding_new_external_to_function_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
The target support for wibble has changed:
- Erlang
+ Erlang, JavaScript
