compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__adding_pure_gleam_implementation_to_external_constant_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
The target support for wobble has changed:
- Erlang
+ Erlang, JavaScript
