compiler-core/src/version_bump/snapshots/gleam_core__version_bump__tests__changing_concrete_function_type_to_generic_is_minor.snap
---
source: compiler-core/src/version_bump/tests.rs
expression: bump
---
-- MINOR

== the_module ==
- pub fn identity(Int) -> Int
+ pub fn identity(a) -> a
